Revert "Minor touch-ups"
This reverts commit efe02cefad9ad16b56846ccda544f641c9d4e51f.